# moygliss

./: .gitignore  conda_env.yml  debug.txt  group_data_agg_log.csv  group_data_log.csv  main_moygliss.py  moygliss.py  pyproject.toml  requirements.txt
assets/: seuild_inhabituels.docx
data/: DIDON_agg_weights.csv  DIDON_moymax.csv  DIDON_pollsites_info.csv  DIDON_sites.csv  V_COV_agg_weights.csv  V_COV_data.csv  V_COV_moymax.csv  V_COV_pollsites_info.csv  V_COV_sites.csv  V_MARS_agg_weights.csv  V_MARS_data.csv  V_MARS_moymax.csv  V_MARS_pollsites_info.csv  V_MARS_sites.csv  V_MART_agg_weights.csv  V_MART_data.csv  V_MART_moymax.csv  V_MART_pollsites_info.csv  V_MART_sites.csv  V_NICE_data.csv  V_NICE_moymax.csv  V_NICE_pollsites_info.csv  V_NICE_sites.csv  cov_pcop.csv  physicals.csv
src/: dictionaries.py  fonctions.py
