[tool.poetry]
name = "pypmgliss-xr"
version = "0.1.0"
description = "Moyennes glissantes 24h"
authors = ["Carlos Diaz <carlos.diaz@atmosud.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.4"
cx-Oracle = "^8.3.0"
numpy = "^1.26.4"
scipy = "^1.13.0"
plotly = "^5.22.0"
pandas = "^2.2.2"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
